@@ -6,6 +6,7 @@
   \subsection{Bugfixes}{
     \itemize{
       \item{Fix problem in C header file.}
+      \item{Fix problem with responses of class \code{R}, spotted by Balint Tamasi.}
     }
   }
 }
